# BSU-Projects

./: README.md
1st-Term/C++/: README.md
1st-Term/C++/Lab-1/: README.md
1st-Term/C++/Lab-3/: solution.cpp
1st-Term/C++/Lab-4/: tests.cpp
1st-Term/C++/Lab-5/: solution.cpp
1st-Term/C++/Lab-6/: Fraction.cpp  main.cpp  utils.h
1st-Term/C++/Lab-7/: Student.cpp  Student.h  StudentAfterFirstSession.cpp  StudentAfterSecondSession.h
1st-Term/C++/Lab-8/: Calculator_fixed.cpp  Stack_fixed.h
2nd-Term/Assembler-Labs/: README.md
2nd-Term/Assembler-Labs/Assembler-Lab-1/: main.cpp
2nd-Term/Assembler-Labs/Assembler-Lab-3/: Assembler_Third_Lab_task_4.cpp
2nd-Term/Assembler-Labs/Kr_Assembler/: CMakeLists.txt  main.cpp
3rd-Term/OS/: README.md
3rd-Term/OS/Lab-1/linux/Lab_1(Linux)/Test/: CMakeLists.txt  main.cpp
5th-Term/Computer-Graphics/: README.md
5th-Term/Computer-Graphics/ColorConverter/: README.md
6th-Term/Computer-Networks/Lab_10/: Computer_networks_lab_10.doc  model_1.pkt  model_2.pkt
6th-Term/Computer-Networks/Lab_11/: Computer_networks_lab_11.doc  model_1.pkt  model_2.pkt
6th-Term/Computer-Networks/Lab_12/: Computer_networks_lab_12.doc  model_1.pkt
6th-Term/Computer-Networks/Lab_13/: Computer_networks_lab_13.doc  model_1.pkt  model_2.pkt  ~$mputer_networks_lab_13.doc
6th-Term/Computer-Networks/Lab_3/: task_1.pkt  task_2.pkt  task_3.pkt  task_4.pkt
6th-Term/Computer-Networks/Lab_6/: model_1.pkt  model_2.pkt
6th-Term/Partial-Differential-Equations/: solution.nb
Fifth-Term/Computer-Graphics/: README.md
First-Term/C++/: README.md
(+425 files in other folders)
